--- a/lentefeestwebapp/package.json
+++ b/lentefeestwebapp/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@videojs/http-streaming": "^1.10.6",
     "core-js": "^3.3.2",
+    "flv.js": "^1.5.0",
     "register-service-worker": "^1.6.2",
+    "video.js": "^7.6.5",
+    "videojs-flash": "^2.2.1",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.3.0",
