--- a/package.json
+++ b/package.json
@@ -18,8 +18,5 @@
   "bugs": {
     "url": "https://github.com/minestarnl/lentefeest/issues"
   },
-  "homepage": "https://github.com/minestarnl/lentefeest#readme",
-  "dependencies": {
-    "node-media-server": "^2.1.2"
-  }
+  "homepage": "https://github.com/minestarnl/lentefeest#readme"
 }
