--- a/lentefeestwebapp/package.json
+++ b/lentefeestwebapp/package.json
@@ -8,18 +8,28 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/vue": "^2.0.0",
     "@videojs/http-streaming": "^1.10.6",
+    "axios": "^0.19.0",
     "core-js": "^3.3.2",
+    "firebase": "^7.3.0",
     "flv.js": "^1.5.0",
+    "googleapis": "^45.0.0",
     "register-service-worker": "^1.6.2",
     "video.js": "^7.6.5",
     "videojs-flash": "^2.2.1",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
+    "vue-cookies": "^1.5.13",
+    "vue-plyr": "^5.1.3",
     "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.1.3",
+    "vue-youtube-embed": "^2.2.2",
+    "vuefire": "^2.2.0",
     "vuetify": "^2.1.0",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-persist": "^2.1.1",
+    "vuexfire": "^3.2.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
