--- a/lentefeestwebapp/package.json
+++ b/lentefeestwebapp/package.json
@@ -21,6 +21,7 @@
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-cookies": "^1.5.13",
+    "vue-google-charts": "^0.3.2",
     "vue-plyr": "^5.1.3",
     "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.1.3",
